<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.6.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>cl.3it</groupId>
	<artifactId>main</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>war</packaging>
	<name>encuesta-backend</name>
	<description>Backend Prueba</description>
	<properties>
		<java.version>11</java.version>
	    <!-- Sonar -->
	    <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
	    <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
	    <sonar.jacoco.reportPath>${basedir}/target/jacoco.exec</sonar.jacoco.reportPath>
	    <sonar.coverage.jacoco.xmlReportPaths>${basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
	    <sonar.language>java</sonar.language>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jdbc</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
	    <dependency>
	        <groupId>org.testng</groupId>
	        <artifactId>testng</artifactId>
	        <version>6.4</version>
	        <scope>test</scope>
	        <optional>true</optional>
	    </dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
		  <groupId>junit</groupId>
		  <artifactId>junit</artifactId>
		  <version>4.11</version><!--$NO-MVN-MAN-VER$-->
		  <scope>test</scope>
		</dependency>		
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-webmvc</artifactId>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
		<dependency>
		    <groupId>org.sonarsource.scanner.maven</groupId>
		    <artifactId>sonar-maven-plugin</artifactId>
		    <version>3.9.1.2184</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>	
	            <artifactId>maven-surefire-plugin</artifactId>
	            <configuration>
	                <skipTests>false</skipTests>
				    <forkCount>3</forkCount>
				    <reuseForks>true</reuseForks>
				    <forkMode>once</forkMode>
				    <testFailureIgnore>true</testFailureIgnore>
				    <useSystemClassLoader>false</useSystemClassLoader>
				    <argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
				 </configuration>
	        </plugin>
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-deploy-plugin</artifactId>
	            <configuration>
	                <skip>false</skip>
	            </configuration>
	        </plugin>
	      <plugin>
	         <groupId>org.jacoco</groupId>
	         <artifactId>jacoco-maven-plugin</artifactId>
	         <version>0.8.3</version>
	         <configuration>
		        <destFile>${sonar.jacoco.reportPath}</destFile>
		        <append>true</append>
		    </configuration>
	         <executions>
	            <execution>
	               <id>jacoco-initialize</id>
	               <goals>
	                  <goal>prepare-agent</goal>
	               </goals>
	               <phase>test-compile</phase>
	            </execution>
	            <execution>
	               <id>jacoco-site</id>
	               <phase>verify</phase>
	               <goals>
	                  <goal>report</goal>
	               </goals>
	            </execution>
	         </executions>
	      </plugin>
		    <plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>		
	</build>
</project>
